--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <title>Calculator</title><meta charset="utf-8">
-<h1> Gabriel Martínez Fresneda y Ana Mateos Sánchez </h1>
+<h1> Ana Mateos Sanchez </h1>
 <script type="text/javascript">
 
 function square() {
